--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>-->
           </div>
         </div>
+		
         <!-- Pages, because we need fixed-through navbar and toolbar, it has additional appropriate classes-->
         <div class="pages navbar-through toolbar-through">
           <!-- Index Page-->
@@ -59,16 +60,16 @@
 				<li class="item-content">
 					<div class="item-media"><i class="icon fa fa-tag"></i></div>  
 					<div class="item-inner">
-						<div class="item-title label">Client Code</div>
+						<!--<div class="item-title label">Client Code</div>-->
 						<div class="item-input item-input-field">
-							<input type="text" name="clientid" class="form-control" placeholder="Client Code"/>
+							<input type="text" name="clientid" class="form-control" placeholder="DB Server"/>
 						</div>
 					</div>
 				</li>
 				<li class="item-content">
 					<div class="item-media"><i class="icon fa fa-industry"></i></div>  
 				  <div class="item-inner form-group">
-					<div class="item-title label">Company</div>
+					<!--<div class="item-title label">Company</div>-->
 					<div class="item-input item-input-field">
 					  <input type="text" name="companyid" class="form-control" placeholder="Company"/>
 					</div>
@@ -77,7 +78,7 @@
 				<li class="item-content">
 				  <div class="item-media"><i class="icon fa fa-user"></i></div>  
 				  <div class="item-inner form-group"> 
-					<div class="item-title label">Username</div>
+					<!--<div class="item-title label">Username</div>-->
 					<div class="item-input item-input-field">
 					  <input type="text" name="username" class="form-control" placeholder="Username"/>
 					</div>
@@ -86,7 +87,7 @@
 				<li class="item-content">
 					<div class="item-media"><i class="icon fa fa-key"></i></div>  
 					<div class="item-inner form-group">
-					  <div class="item-title label">Password</div>
+					  <!--<div class="item-title label">Password</div>-->
 					  <div class="item-input item-input-field">
 						<input type="password" name="password" class="form-control" placeholder="Password"/>
 					  </div>
