sub details in detail page

--- a/main.html
+++ b/main.html
@@ -44,12 +44,11 @@
         <div class="navbar">
           <div class="navbar-inner">
             <div class="center sliding">Helix Mobile</div>
-            <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"> <i class="icon fa fa-gear"></i></a>
-            </div>
+            <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
           </div>
         </div>
         <!-- Pages, because we need fixed-through navbar and toolbar, it has additional appropriate classes-->
-        <div class="pages navbar-through toolbar-through">
+        <div class="pages navbar-through no-toolbar">
           <!-- Index Page-->
           <div class="page">
             <div class="page-content">
@@ -131,9 +130,9 @@
           </div>
         </div>
         <!-- Bottom Toolbar-->
-        <div class="toolbar">
+        <!-- <div class="toolbar">-->
           <!--<div class="toolbar-inner"><a href="#" class="link">Link 1</a><a href="#" class="link">Link 2</a></div>-->
-        </div>
+        <!-- </div>-->
       </div>
     </div>
     <!-- Template7 templates-->
