--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 		
         <!-- Pages, because we need fixed-through navbar and toolbar, it has additional appropriate classes-->
-        <div class="pages navbar-through toolbar-through">
+        <div class="pages navbar-through no-toolbar">
           <!-- Index Page-->
           <div data-page="index" class="page">
             <div class="page-content">
@@ -106,12 +106,12 @@
             </div>
           </div>
         </div>
-        <!-- Bottom Toolbar-->
+        <!-- Bottom Toolbar
         <div class="toolbar">
-          <div class="toolbar-inner">
-			<!--<a href="#" class="link">Link 1</a><a href="#" class="link">Link 2</a>-->
+          <div class="toolbar-inner">-->
+			<!--<a href="#" class="link">Link 1</a><a href="#" class="link">Link 2</a>
 		  </div>
-        </div>
+        </div>-->
       </div>
     </div>
     <!-- Template7 templates-->
