--- a/modules/goodsreceipt/goodsreceipt.html
+++ b/modules/goodsreceipt/goodsreceipt.html
@@ -3,15 +3,55 @@
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
     <div class="center sliding">Goods Receipt</div>
-    <div class="right"><a href="#" class="link icon-only open-panel"> <i class="icon icon-bars"></i></a></div>
+    <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
+<!-- Speed Dial Wrap -->
+  <div class="speed-dial">
+	<!-- FAB inside will open Speed Dial actions -->
+	<a href="#" class="floating-button" onclick="toggleactionbuttons(this,'')">
+	  <!-- First icon is visible when Speed Dial actions are closed -->
+	  <i class="icon fa fa-plus"></i>
+	  <!-- Second icon is visible when Speed Dial actions are opened -->
+	  <i class="icon fa fa-minus"></i>
+	</a>
+	<!-- Speed Dial Actions -->
+	<div class="speed-dial-buttons">
+	  <!-- First Speed Dial button -->
+	  <a href="#" title="Approve" onclick="toggleactionbuttons(this,'Approve')">
+		<i class="icon fa fa-check"></i>
+	  </a>
+	  <!-- Second Speed Dial  button -->
+	  <a href="#" title="Reject" onclick="toggleactionbuttons(this,'Reject')">
+		<i class="icon fa fa-remove"></i>
+	  </a>
+	  <!-- Third Speed Dial  button -->
+	  <a href="#" title="Return To Maker" onclick="toggleactionbuttons(this,'Return To Maker')">
+		<i class="icon fa fa-mail-reply"></i>
+	  </a>
+	</div>
+  </div>
+  <!-- End of Speed Dial -->
 <div class="pages">
   <div data-page="forapproval" class="page">
+	<form data-search-list=".list-block-search" data-search-in=".item-title, .vendorNameMaster, .amountMaster, .item-subtitle" class="searchbar searchbar-init">
+		<div class="searchbar-input">
+		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
+		</div>
+		<a href="#" class="searchbar-cancel"><i class="icon fa fa-remove"></i></a>
+	</form>
+	
+	<!-- Search Bar overlay -->
+	 <div class="searchbar-overlay"></div>
     <div class="page-content">
-      <!-- <div class="content-block-title">Voucher Approval List</div>-->
-      <div class="list-block media-list">
-        <ul>
+      <!-- This block will be displayed if nothing found -->
+	  <div class="content-block searchbar-not-found">
+		<div class="content-block-inner">Nothing found</div>
+	  </div>
+	  
+      <div class="list-block list-block-search searchbar-found media-list">
+		
+        
 		 <!--  <li class="item-content">
             <div class="item-inner"> -->
 			<!--<a href="#" class="item-content item-link" data-context='{"TranID": 123}' onclick="test(this.TranID)">			-->		
@@ -22,27 +62,30 @@
 			</div>
           </li>	-->
 		{{#each forapproval}}
-          <li class="item-content">
-            <div class="item-inner">
-				<a title={{SeqID}} href="#" class="item-content item-link" style="padding: 0px; margin: 0px;" data-context-name="forapproval.{{@index}}" onclick="goodsreceiptdetaillist(this)">
-				<div class="item-media">
-					<div class="item-title" style="font-size: 23px;">{{TranID}}</div>
-				</div>
-				<div class="item-after">
-					<b><span style="font-size: 33px;">{{CurCode}} {{DocAmount}}</span></b>
-				</div>	
-				</a>
-				<div class="item-title-row">
-					<div class="item-subtitle" style="font-size: 23px;">{{VendorName}}</div>
-				</div>
-				<div class="item-subtitle">{{TranDate}}</div>
-				<div class="item-subtitle">{{Memo}}</div>	
-				<!--<span class="badge">Vendor: {{VendorName}}</span>-->
-	
-				
-            </div>
-          </li>{{/each}}
-        </ul>
+		<div class="list-group">
+			<ul>
+				<li class="list-group-title">{{TranDate}}</li>
+				<li class="item-content dataToBePassed" title={{SeqID}} onclick="goodsreceiptdetaillist(this)">
+					<label class="label-checkbox item-content">
+					<input type="checkbox" name="my-checkbox">
+					<div class="item-media">
+						<i class="icon icon-form-checkbox"></i>
+					</div>
+					<div class="item-inner">
+						<div class="tranIDMaster">{{TranID}}</div>
+						<div class="item-title-row">
+							<div class="vendorNameMaster">{{VendorName}}</div>
+						</div>
+						<div class="amountMaster">{{CurCode}} {{DocAmount}}</div>
+						<div class="item-subtitle" style="display:none;">{{TranDate}}</div>
+						<div class="item-subtitle">{{Memo}}</div>	
+						<!--<span class="badge">Vendor: {{VendorName}}</span>-->
+					</div>
+					</label>
+				</li>
+			</ul>
+		</div>
+        {{/each}}  
       </div>
     </div>
   </div>
