--- a/modules/requisition/requisition.html
+++ b/modules/requisition/requisition.html
@@ -3,15 +3,16 @@
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
     <div class="center sliding">Requisition</div>
-    <div class="right"><a href="#" class="link icon-only open-panel"> <i class="icon icon-bars"></i></a></div>
+    <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
 <div class="pages">
   <div data-page="forapproval" class="page">
-	  <form data-search-list=".list-block-search" data-search-in=".item-title" class="searchbar searchbar-init">
+	  <form data-search-list=".list-block-search" data-search-in=".item-title, .amountMaster, .item-subtitle" class="searchbar searchbar-init">
 		<div class="searchbar-input">
-		  <input type="search" placeholder="Search"><a href="#" class="searchbar-clear"></a>
-		</div><a href="#" class="searchbar-cancel">Cancel</a>
+		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
+		</div>
+		<a href="#" class="searchbar-cancel"><i class="icon fa fa-remove"></i></a>
 	  </form>
   
 	 <!-- Search Bar overlay -->
@@ -37,20 +38,18 @@
 			</div>
           </li>	-->
 		{{#each forapproval}}
-          <li class="item-content">
+          <li title={{SeqID}} class="item-content" onclick="requisitiondetaillist(this)">
             <div class="item-inner">
-				<a title={{SeqID}} href="#" class="item-content item-link" style="padding: 0px; margin: 0px;" data-context-name="forapproval.{{@index}}" onclick="requisitiondetaillist(this)">
 				<div class="item-media">
-					<div class="item-title" style="font-size: 23px;">{{TranID}}</div>
+					<div class="item-title tranIDMaster">{{TranID}}</div>
 				</div>
 				<div class="item-title-row">
-					<b><span style="font-size: 25px;">{{CurCode}} {{DocAmount}}</span></b>
+					<!--<div class="vendorNameMaster">{{VendorName}}</div>-->
 				</div>
+				<div class="amountMaster">{{CurCode}} {{DocAmount}}</div>
 				<div class="item-subtitle">{{TranDate}}</div>
 				<div class="item-subtitle">{{Memo}}</div>	
 				<!--<span class="badge">Vendor: {{VendorName}}</span>-->
-	
-				
             </div>
           </li>{{/each}}
         </ul>
