--- a/modules/requisition/requisitiondetail.html
+++ b/modules/requisition/requisitiondetail.html
@@ -7,7 +7,7 @@
 	  <div class="navbar-inner">
 		<div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
 		<div class="center sliding">Requisition Detail</div>
-		<div class="right"><a href="#" class="link icon-only open-panel"> <i class="icon icon-bars"></i></a></div>
+		<div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
 	  </div>
 	</div>
 	<!-- Speed Dial Wrap -->
@@ -45,11 +45,27 @@
 			<li id={{SeqID}} class="dataToBePassed"><b>Ref Date</b> - {{TranDate}}</li>
 			<!--<li><b>Vendor</b> - {{VendorName}}</li>-->
 			<!--<li><b>SLName</b> - {{SLName}}</li>-->
-			<li><b>Amount</b> - {{CurCode}}{{DocAmount}}</li>
+			<li><b>Amount</b> - {{CurCode}} {{DocAmount}}</li>
 			<li><b>Particulars</b> - {{Memo}}</li>
 			<li><b>Status</b> - {{Status}}</li>
           </ul>
 		  {{/each}}
+		  <div class="list-block media-list" style="margin-top:0px;">
+		  {{#each forapprovaldetail}}	
+		  <ul>
+			<li class="item-content">
+				<!--<div class="item-media">{{TranID}}</div>-->
+				<div class="item-inner">
+				  <div class="item-title"><b>{{ItemID}}</b></div>	
+				  <div class="item-subtitle"><b>{{ItemDescription}}</b></div>
+				  <div class="item-subtitle"><b>{{Qty}} {{Unit}}</b></div>
+				</div>
+				<div class="item-after">{{Unit}}</div>
+			</li>
+		  </ul>
+		  {{/each}}
+		  </div>
+	  
         </div>
       </div>
     </div>
