--- a/modules/procurement/procurement.html
+++ b/modules/procurement/procurement.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 <div class="pages">
-  <div data-page="forapproval" class="page">
+  <div data-page="procurement" class="page">
 	<form data-search-list=".list-block-search" data-search-in=".item-title, .vendorNameMaster, .amountMaster, .item-subtitle" class="searchbar searchbar-init">
 		<div class="searchbar-input">
 		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
