--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
             <li><a href="#" class="button button-big " style="margin-left:0px;"><span class="fa fa-gears"></span> Profile Settings</a></li>
             <li><a href="#" class="button button-big " style="margin-left:0px;"><span class="fa fa-key"></span> Change Password</a></li>
-            <li><a href="#" class="button button-big " style="margin-left:0px;" onclick="doLogout();"><span class="fa fa-power-off"></span> Logout</a></li>
+            <li><a href="#" class="button button-big external" style="margin-left:0px;" onclick="doLogout();"><span class="fa fa-power-off"></span> Logout</a></li>
         </ul>
       </div>
     </div>
@@ -42,19 +42,19 @@
         <!-- Top Navbar-->
         <div class="navbar">
           <div class="navbar-inner">
-            <div class="center sliding">Helix Login</div>
+            <!--<div class="center sliding">Helix Login</div>-->
             <!--<div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"> <i class="icon icon-bars"></i></a>
             </div>-->
           </div>
         </div>
 		
         <!-- Pages, because we need fixed-through navbar and toolbar, it has additional appropriate classes-->
-        <div class="pages navbar-through no-toolbar">
+        <div class="pages navbar-fixed no-toolbar">
           <!-- Index Page-->
-          <div data-page="index" class="page">
+          <div data-page="index" class="page no-toolbar no-swipeback">
             <div class="page-content">
-              <!--<div class="content-block-title">Helix Login</div>-->
-		  <form id="form-login">
+          <div class="content-block-title"><center><span style="font-size:2em; color:#000;">Helix Login</span></center></div>
+		  <form id="form-login" class="store-data">
 			<div class="list-block loginpage">
 			  <ul>
 				<li class="item-content">
@@ -106,36 +106,8 @@
             </div>
           </div>
         </div>
-        <!-- Bottom Toolbar
-        <div class="toolbar">
-          <div class="toolbar-inner">-->
-			<!--<a href="#" class="link">Link 1</a><a href="#" class="link">Link 2</a>
-		  </div>
-        </div>-->
       </div>
     </div>
-    <!-- Template7 templates-->
-    <script type="text/template7" id="about">
-      <div class="navbar">
-        <div class="navbar-inner">
-          <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back "></i><span>Back</span></a></div>
-          <div class="center sliding">About Me</div>
-          <div class="right"><a href="#" class="link icon-only open-panel"> <i class="icon icon-bars"></i></a></div>
-        </div>
-      </div>
-      <div class="pages">
-        <div data-page="about" class="page">
-          <div class="page-content">
-            <div class="content-block">
-              <div class="content-block-inner">
-                <p>Hello, my name is {{name}}. I am {{age}} years old and i am working as {{position}} at {{company}}.</p>
-                <p>I have a lot of interests: {{#if interests}}{{join interests delimeter=", "}}{{/if}}</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </script>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <!-- Path to your app js-->
