--- a/main.html
+++ b/main.html
@@ -48,19 +48,10 @@
           </div>
         </div>
         <!-- Pages, because we need fixed-through navbar and toolbar, it has additional appropriate classes-->
-        <div class="pages navbar-through no-toolbar">
+        <div class="pages navbar-fixed no-toolbar no-swipeback">
           <!-- Index Page-->
           <div class="page">
             <div class="page-content">
-             <!-- <div class="content-block-title">Welcome To Helix</div>
-              <div class="content-block">
-                <div class="content-block-inner">
-					<p>Approval Process</p>-->
-					<!--<div>
-						<p>Welcome to Helix App Approval {{url_query.username}}!</p>
-					</div>
-                </div>
-              </div>-->
               <div class="list-block">
                 <ul>
 					<li><a href="#" class="item-link item-content" onclick="requisitionlist()">
@@ -103,29 +94,8 @@
                       <div class="item-inner"> 
                         <div class="item-title">Receipt</div>
                       </div></a></li>
-				<!--		
-				  <li><a href="#" data-template="about" data-context-name="about" class="item-link item-content" >
-                      <div class="item-inner"> 
-                        <div class="item-title">About</div>
-                      </div></a></li>
-                  <li><a href="cars.html" data-context-name="cars" class="item-link item-content">
-                      <div class="item-inner">
-                        <div class="item-title">My Cars</div>
-                      </div></a></li>
-                  <li><a href="contacts.html" class="item-link item-content">
-                      <div class="item-inner">
-                        <div class="item-title">Contacts</div>
-                      </div></a></li>-->
-                </ul>
+				</ul>
               </div>
-              <!--<div class="content-block-title">Side panels</div>
-              <div class="content-block">
-                <div class="row">
-                  <div class="col-50"><a href="#" data-panel="left" class="button open-panel">Left Panel</a></div>
-                  <div class="col-50"><a href="#" data-panel="right" class="button open-panel">Right Panel</a></div>
-                </div>
-              </div>
-			  -->
             </div>
           </div>
         </div>
@@ -135,31 +105,6 @@
         <!-- </div>-->
       </div>
     </div>
-    <!-- Template7 templates-->
-    <script type="text/template7" id="about">
-      <div class="navbar">
-        <div class="navbar-inner">
-          <div class="left sliding"><a href="#" class="back link"> <i class="icon fa fa-chevron-left"></i><span>Back</span></a></div>
-          <div class="center sliding">About Me</div>
-          <div class="right"><a href="#" class="link icon-only open-panel"> <i class="icon fa fa-gear"></i></a></div>
-        </div>
-      </div>
-      <div class="pages">
-        <div data-page="about" class="page">
-          <div class="page-content">
-            <div class="content-block">
-              <div class="content-block-inner">
-                <p>Hello, my name is {{name}}. I am {{age}} years old and i am working as {{position}} at {{company}}.</p>
-                <p>I have a lot of interests: {{#if interests}}{{join interests delimeter=", "}}{{/if}}</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </script>
-	<!--<script type="text/template7" id="maincontent">
-		Welcome to Helix App Approval {{url_query.username}}!
-	</script>-->
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/framework7.min.js"></script>
     <!-- Path to your app js-->
