--- a/modules/procurement/procurementdetail.html
+++ b/modules/procurement/procurementdetail.html
@@ -1,5 +1,5 @@
 <div class="pages">
-  <div data-page="forapprovaldetail" class="page navbar-fixed">
+  <div data-page="procurementdetail" class="page navbar-fixed">
 	<!--<a href="#" class="floating-button color-pink">
 		<i class="icon fa fa-pencil"></i>
 	</a>-->
@@ -39,10 +39,11 @@
     <div class="page-content">
       <div class="content-block">
         <div class="content-block-inner">
+		<div class="list-block media-list" style="margin-top:0px;">
 		  {{#each forapproval}}	
           <h3>Ref No: {{TranID}}</h3>
           <ul>
-			<li id={{SeqID}} class="dataToBePassed"><b>Ref Date</b> - {{TranDate}}</li>
+			<li id={{SeqID}} title="procurement" class="dataToBePassed"><b>Ref Date</b> - {{TranDate}}</li>
 			<li><b>Vendor</b> - {{VendorName}}</li>
 			<!--<li><b>SLName</b> - {{SLName}}</li>-->
 			<li><b>Amount</b> - {{CurCode}} {{DocAmount}}</li>
@@ -50,18 +51,20 @@
 			<li><b>Status</b> - {{Status}}</li>
           </ul>
 		  {{/each}}
+		  </div>
 		  <div class="list-block media-list" style="margin-top:0px;">
 		  {{#each forapprovaldetail}}	
 		  <ul>
-			<li class="item-content">
-				<!--<div class="item-media">{{TranID}}</div>-->
-				<div class="item-inner">
-				  <div class="item-title"><b>{{ItemID}}</b></div>	
-				  <div class="item-subtitle"><b>{{ItemDescription}}</b></div>
-				  <div class="item-subtitle"><b>{{Qty}} {{Unit}}</b></div>
-				  <!--<div class="item-subtitle"><b>{{Unit}}</b></div>-->
+			<li>
+				<div class="item-content">
+					<div class="item-inner">
+					  <div class="item-title"><b>{{ItemID}}</b></div>	
+					  <div class="item-subtitle"><b>{{ItemDescription}}</b></div>
+					  <div class="item-subtitle"><b>{{Qty}} {{Unit}}</b></div>
+					  <!--<div class="item-subtitle"><b>{{Unit}}</b></div>-->
+					</div>
+					<div class="item-after">{{CurCode}} {{Amount}}</div>
 				</div>
-				<div class="item-after">{{CurCode}} {{Amount}}</div>
 			</li>
 		  </ul>
 		  {{/each}}
