--- a/modules/requisition/requisition.html
+++ b/modules/requisition/requisition.html
@@ -6,28 +6,64 @@
     <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
+
 <div class="pages">
-  <div data-page="forapproval" class="page">
-	  <form data-search-list=".list-block-search" data-search-in=".item-title, .amountMaster, .item-subtitle" class="searchbar searchbar-init">
+  <div data-page="requisition" class="page">
+  
+	<!-- Speed Dial Wrap -->
+	<div class="speed-dial">
+	<!-- FAB inside will open Speed Dial actions -->
+	<a href="#" title="requisition" class="floating-button" onclick="toggleactionbuttons(this,'')">
+	  <!-- First icon is visible when Speed Dial actions are closed -->
+	  <i class="icon icon-arrow-up"></i>
+	  <!-- Second icon is visible when Speed Dial actions are opened -->
+	  <i class="icon icon-arrow-down"></i>
+	</a>
+	<!-- Speed Dial Actions -->
+	<div class="speed-dial-buttons">
+	  <!-- First Speed Dial button -->
+	  <a href="#" title="New" onclick="toggleactionbuttons(this,'New')">
+		<i class="icon icon-file-empty"></i>
+	  </a>
+	  <!-- First Speed Dial button -->
+	  <a href="#" title="Approve" onclick="toggleactionbuttons(this,'Approve')">
+		<i class="icon fa fa-check"></i>
+	  </a>
+	  <!-- Second Speed Dial  button -->
+	  <a href="#" title="Reject" onclick="toggleactionbuttons(this,'Reject')">
+		<i class="icon fa fa-remove"></i>
+	  </a>
+	  <!-- Third Speed Dial  button -->
+	  <a href="#" title="Return To Maker" onclick="toggleactionbuttons(this,'Return To Maker')">
+		<i class="icon fa fa-mail-reply"></i>
+	  </a>
+	</div>
+	</div>
+	<!-- End of Speed Dial -->
+		
+	<form data-search-list=".virtual-list" class="searchbar searchbar-init">
 		<div class="searchbar-input">
 		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
 		</div>
 		<a href="#" class="searchbar-cancel"><i class="icon fa fa-remove"></i></a>
-	  </form>
+	</form>
   
 	 <!-- Search Bar overlay -->
 	 <div class="searchbar-overlay"></div>
   
     <div class="page-content">
-      <!-- <div class="content-block-title">Voucher Approval List</div>-->
-	  <!-- This block will be displayed if nothing found -->
 	  <div class="content-block searchbar-not-found">
 		<div class="content-block-inner">Nothing found</div>
 	  </div>
 	
+	 <!-- Virtual List -->
+		<div class="list-block list-block-search searchbar-found virtual-list media-list">
+		  <!-- keep it empty -->
+		</div>
+		
       <!-- This block will be displayed if anything found, and this list block is used a searbar target -->
-    <div class="list-block list-block-search searchbar-found media-list">
-        <ul>
+    <!-- <div class="list-block list-block-search searchbar-found media-list">
+        <ul>-->
 		 <!--  <li class="item-content">
             <div class="item-inner"> -->
 			<!--<a href="#" class="item-content item-link" data-context='{"TranID": 123}' onclick="test(this.TranID)">			-->		
@@ -37,23 +73,23 @@
 				</div>		
 			</div>
           </li>	-->
-		{{#each forapproval}}
-          <li title={{SeqID}} class="item-content" onclick="requisitiondetaillist(this)">
+<!-- 		{{#each forapproval}}
+          <li title={{SeqID}} title="requisition" class="item-content dataToBePassed" onclick="requisitiondetaillist(this)">
             <div class="item-inner">
 				<div class="item-media">
 					<div class="item-title tranIDMaster">{{TranID}}</div>
 				</div>
-				<div class="item-title-row">
+				<div class="item-title-row">-->
 					<!--<div class="vendorNameMaster">{{VendorName}}</div>-->
-				</div>
+<!-- 				</div>
 				<div class="amountMaster">{{CurCode}} {{DocAmount}}</div>
 				<div class="item-subtitle">{{TranDate}}</div>
-				<div class="item-subtitle">{{Memo}}</div>	
+				<div class="item-subtitle">{{Memo}}</div>	-->
 				<!--<span class="badge">Vendor: {{VendorName}}</span>-->
-            </div>
+<!--             </div>
           </li>{{/each}}
         </ul>
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
