--- a/modules/requisition/requisitioneditdetail.html
+++ b/modules/requisition/requisitioneditdetail.html
@@ -6,10 +6,10 @@
 	<div class="navbar">
 	  <div class="navbar-inner">
 		<div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
-		<div class="center sliding">Requisition Edit Detail</div>
+		<div class="center sliding">Edit Requisition</div>
 		<div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
 	  </div>
-	</div>
+	</div>	
 	<!-- Speed Dial Wrap -->
 	  <div class="speed-dial">
 		<!-- FAB inside will open Speed Dial actions -->
