--- a/modules/goodsreceipt/goodsreceipt.html
+++ b/modules/goodsreceipt/goodsreceipt.html
@@ -1,13 +1,12 @@
-
-<div class="navbar">
+<div class="pages">
+  <div data-page="goodsreceipt" class="page navbar-fixed">
+	<div class="navbar">
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
     <div class="center sliding">Goods Receipt</div>
     <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
-<div class="pages">
-  <div data-page="goodsreceipt" class="page">
 	<form data-search-list=".virtual-list" class="searchbar searchbar-init">
 		<div class="searchbar-input">
 		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
