--- a/modules/requisition/requisition.html
+++ b/modules/requisition/requisition.html
@@ -1,15 +1,14 @@
-
-<div class="navbar">
+<div class="pages">
+  <div data-page="requisition" class="page navbar-fixed">
+  <div class="navbar">
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
     <div class="center sliding">Requisition</div>
     <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
-
-<div class="pages">
-  <div data-page="requisition" class="page">
-  
+	 <!-- Search Bar overlay -->
+	 <div class="searchbar-overlay"></div>
 	<!-- Speed Dial Wrap -->
 	<div class="speed-dial">
 	<!-- FAB inside will open Speed Dial actions -->
@@ -48,10 +47,10 @@
 		<a href="#" class="searchbar-cancel"><i class="icon fa fa-remove"></i></a>
 	</form>
   
-	 <!-- Search Bar overlay -->
-	 <div class="searchbar-overlay"></div>
-  
+ 
     <div class="page-content">
+	
+ 
 	  <div class="content-block searchbar-not-found">
 		<div class="content-block-inner">Nothing found</div>
 	  </div>
