--- a/modules/voucher/voucher.html
+++ b/modules/voucher/voucher.html
@@ -1,13 +1,13 @@
 
-<div class="navbar">
+<div class="pages">
+  <div data-page="forapproval" class="page navbar-fixed">
+  <div class="navbar">
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
     <div class="center sliding">Voucher</div>
     <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
-<div class="pages">
-  <div data-page="forapproval" class="page">
 	<form data-search-list=".list-block-search" data-search-in=".item-title, .vendorNameMaster, .amountMaster, .item-subtitle" class="searchbar searchbar-init">
 		<div class="searchbar-input">
 		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
