--- a/index.html
+++ b/index.html
@@ -94,7 +94,19 @@
 					  </div>
 					</div>
 				</li>
-				
+				<!--<li><a href="#" class="item-link smart-select" data-back-on-select="true" data-open-in="picker" data-searchbar="true">
+        <select name="car">
+        <option value="honda">Honda</option>
+            <option value="lexus">Lexus</option>
+            <option value="mazda">Mazda</option>
+            <option value="nissan">Nissan</option>
+            <option value="toyota">Toyota</option>
+        </select>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Car</div>
+          </div>
+        </div></a></li>-->
 			  </ul>
 			</div>
 			<div class="list-block">
@@ -110,7 +122,7 @@
       </div>
     </div>
     <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/framework7.min.js"></script>
+    <script type="text/javascript" src="js/framework7.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
   </body>
