--- a/modules/requisition/requisitioneditdetail.html
+++ b/modules/requisition/requisitioneditdetail.html
@@ -40,7 +40,7 @@
 				<ul>
 					<li class="swipeout">
 						<div class="swipeout-content">
-							<div>
+							<div style="display:none;">
 								<div>
 									<span>Transaction ID</span>
 									<div class="">
@@ -48,7 +48,7 @@
 									</div>
 								</div>
 							</div>
-							<div>
+							<div style="display:none;">
 								<div>
 									<span>Transaction Date</span>
 									<div class="">
@@ -87,8 +87,8 @@
 				</ul>
 			</div>
 			</form>
-			<a href="#" class="button"  title="requisition" onclick="openPopupEditDetail(this,'');" style="margin-top:0px;">
-				<i class="icon fa fa-plus"></i>
+			<a href="#" class="button"  title="requisition" onclick="openPopupEditDetail(this,'');" style="margin-top:0px; width: 30%;">
+				Add Item
 			</a>
 			
 			<form id="requisitionDetailForm">
