--- a/main.html
+++ b/main.html
@@ -6,13 +6,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>Helix Mobile</title>
-    <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
-    <link rel="stylesheet" href="css/helix.css">
-    <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="css/my-app.css">
-    <link rel="stylesheet" type="text/css" href="css/icomoon.css" />
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
   </head>
   <body>
     <!-- Status bar overlay for fullscreen mode-->
@@ -51,66 +44,29 @@
             <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
           </div>
         </div>
-            <div class="page-content">
+            <div class="page-content maincontent">
 			 <!-- Top Navbar-->
         
               <div class="list-block">
                 <ul>
-					<li><a href="#" class="item-link item-content" onclick="requisitionlist()">
+				  <li><a href="#" class="item-link item-content" onclick="dashboardmenu()">
                       <div class="item-inner"> 
-                        <div class="item-title">Requisition</div>
+                        <div class="item-title">Dashboard</div>
                       </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="procurementlist()">
+				  <li><a href="#" class="item-link item-content" onclick="maintenance()">
                       <div class="item-inner"> 
-                        <div class="item-title">Purchase Order</div>
-                      </div></a></li>					  
-                  <li><a href="#" class="item-link item-content" onclick="voucherlist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Voucher</div>
+                        <div class="item-title">Maintenance</div>
                       </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="paymentlist()">
+				  <li><a href="#" class="item-link item-content" onclick="approval()">
                       <div class="item-inner"> 
-                        <div class="item-title">Payment</div>
-                      </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="goodsreceiptlist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Goods Receipt</div>
-                      </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="journallist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Journal</div>
-                      </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="salesorderlist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Sales Order</div>
-                      </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="deliverylist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Delivery</div>
-                      </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="saleslist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Sales</div>
-                      </div></a></li>
-				  <li><a href="#" class="item-link item-content" onclick="receiptlist()">
-                      <div class="item-inner"> 
-                        <div class="item-title">Receipt</div>
-                      </div></a></li>
+                        <div class="item-title">Approval</div>
+                      </div></a></li>		
 				</ul>
               </div>
-			  
             </div>
           </div>
         </div>
-        <!-- Bottom Toolbar-->
-        <!-- <div class="toolbar">-->
-          <!--<div class="toolbar-inner"><a href="#" class="link">Link 1</a><a href="#" class="link">Link 2</a></div>-->
-        <!-- </div>-->
       </div>
     </div>
-    <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="js/framework7.js"></script>
-    <!-- Path to your app js-->
-    <script type="text/javascript" src="js/my-app.js"></script>
   </body>
 </html>
