--- a/modules/charity/approval/charitydetail.html
+++ b/modules/charity/approval/charitydetail.html
@@ -1,12 +1,12 @@
 <div class="pages">
-  <div data-page="voucherdetail" class="page navbar-fixed">
+  <div data-page="charitydetailApp" class="page navbar-fixed">
 	<!--<a href="#" class="floating-button color-pink">
 		<i class="icon fa fa-pencil"></i>
 	</a>-->
 	<div class="navbar">
 	  <div class="navbar-inner">
 		<div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
-		<div class="center sliding">Voucher Detail</div>
+		<div class="center sliding">Charity Detail</div>
 		<div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
 	  </div>
 	</div>
@@ -42,7 +42,7 @@
 		  {{#each forapproval}}	
           <h3>Ref No: {{TranID}}</h3>
           <ul>
-			<li id={{BatNbr}} title="voucher" class="dataToBePassed"><b>Ref Date</b> - {{TranDate}}</li>
+			<li id={{BatNbr}} title="charity" class="dataToBePassed"><b>Ref Date</b> - {{TranDate}}</li>
 			<li><b>Claimant</b> - {{VendorName}}</li>
 			<!--<li><b>SLName</b> - {{SLName}}</li>-->
 			<li><b>Amount</b> - {{CurCode}} {{DocAmount}}</li>
@@ -57,7 +57,8 @@
 				<!--<div class="item-media">{{TranID}}</div>-->
 				<div class="item-inner">
 				  <div class="item-title"><b>{{Account}}</b></div>	
-				  <div class="item-subtitle"><b>{{AccountDesc}}</b></div>
+				  <!--<div class="item-subtitle"><b>{{AccountDesc}}</b></div>-->
+				  <div class="item-subtitle">{{ItemDescription}}</div>
 				  <!--<div class="item-subtitle"><b>{{SubDesc}}</b></div>-->
 				</div>
 				<div class="item-after">{{CurCode}} {{Amount}}</div>
