--- a/modules/prizeclaim/prizeclaim.html
+++ b/modules/prizeclaim/prizeclaim.html
@@ -1,10 +1,10 @@
 
 <div class="pages">
-  <div data-page="voucher" class="page navbar-fixed">
+  <div data-page="prizeclaim" class="page navbar-fixed">
   <div class="navbar">
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
-    <div class="center sliding">Voucher</div>
+    <div class="center sliding">Prize Claim</div>
     <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
@@ -19,16 +19,13 @@
 	 <div class="searchbar-overlay"></div>
 	 
     <div class="page-content">
+      <!-- <div class="content-block-title">Voucher</div>-->
 	  <!-- This block will be displayed if nothing found -->
 	  <div class="content-block searchbar-not-found">
 		<div class="content-block-inner">Nothing found</div>
 	  </div>
 	  
-	  <div class="content-block">
-      </div>
-	  
-	  <!-- Virtual List -->
-		<div class="list-block list-block-search searchbar-found virtual-list media-list">
+      <div class="list-block list-block-search searchbar-found virtual-list media-list">
 		  <!-- keep it empty -->
 		</div>
     </div>
