--- a/modules/requisition/approval/requisition.html
+++ b/modules/requisition/approval/requisition.html
@@ -1,36 +1,34 @@
-
 <div class="pages">
-  <div data-page="voucher" class="page navbar-fixed">
+  <div data-page="requisitionApp" class="page navbar-fixed">
   <div class="navbar">
   <div class="navbar-inner">
     <div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
-    <div class="center sliding">Voucher</div>
+    <div class="center sliding">Requisition Approval</div>
     <div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
   </div>
 </div>
+	 <!-- Search Bar overlay -->
+	<div class="searchbar-overlay"></div>
 	<form data-search-list=".virtual-list" class="searchbar searchbar-init">
 		<div class="searchbar-input">
 		  <input type="search" placeholder="Search"><!--<a href="#" class="searchbar-clear"></a>-->
 		</div>
 		<a href="#" class="searchbar-cancel"><i class="icon fa fa-remove"></i></a>
 	</form>
-	
-	<!-- Search Bar overlay -->
-	 <div class="searchbar-overlay"></div>
-	 
+  
+ 
     <div class="page-content">
-	  <!-- This block will be displayed if nothing found -->
+	
+ 
 	  <div class="content-block searchbar-not-found">
 		<div class="content-block-inner">Nothing found</div>
 	  </div>
-	  
-	  <div class="content-block">
-      </div>
-	  
-	  <!-- Virtual List -->
+	
+	 <!-- Virtual List -->
 		<div class="list-block list-block-search searchbar-found virtual-list media-list">
 		  <!-- keep it empty -->
 		</div>
+
     </div>
   </div>
 </div>
