--- a/modules/requisition/approval/requisitiondetail.html
+++ b/modules/requisition/approval/requisitiondetail.html
@@ -1,12 +1,12 @@
 <div class="pages">
-  <div data-page="voucherdetail" class="page navbar-fixed">
+  <div data-page="requisitiondetailApp" class="page navbar-fixed">
 	<!--<a href="#" class="floating-button color-pink">
 		<i class="icon fa fa-pencil"></i>
 	</a>-->
 	<div class="navbar">
 	  <div class="navbar-inner">
 		<div class="left sliding"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a></div>
-		<div class="center sliding">Voucher Detail</div>
+		<div class="center sliding">Requisition Detail Approval</div>
 		<div class="right"><a href="#" class="link icon-only open-panel" data-panel="right"><i class="icon fa fa-gear"></i></a></div>
 	  </div>
 	</div>
@@ -37,34 +37,38 @@
 	  </div>
 	  <!-- End of Speed Dial -->
     <div class="page-content">
+	
       <div class="content-block">
         <div class="content-block-inner">
-		  {{#each forapproval}}	
+		   <div class="list-block media-list" style="margin-top:0px;">	
+		  {{#each header}}	
           <h3>Ref No: {{TranID}}</h3>
           <ul>
-			<li id={{BatNbr}} title="voucher" class="dataToBePassed"><b>Ref Date</b> - {{TranDate}}</li>
-			<li><b>Claimant</b> - {{VendorName}}</li>
+			<li class="dataToBePassed" id={{SeqID}}><b>Ref Date</b> - {{TranDate}}</li>
+			<!--<li><b>Vendor</b> - {{VendorName}}</li>-->
 			<!--<li><b>SLName</b> - {{SLName}}</li>-->
 			<li><b>Amount</b> - {{CurCode}} {{DocAmount}}</li>
-			<li><b>Particulars</b> - {{Memo}}</li>
-			<li><b>Status</b> - {{Status}}</li>
+			<li><b>Particulars</b> - {{Details}}</li>
+			<li><b>RequiredDate</b> - {{RequiredDate}}</li>
           </ul>
 		  {{/each}}
+		  </div>
 		  <div class="list-block media-list" style="margin-top:0px;">
-		  {{#each forapprovaldetail}}	
+		  {{#each detail}}	
 		  <ul>
 			<li class="item-content">
 				<!--<div class="item-media">{{TranID}}</div>-->
 				<div class="item-inner">
-				  <div class="item-title"><b>{{Account}}</b></div>	
-				  <div class="item-subtitle"><b>{{AccountDesc}}</b></div>
-				  <!--<div class="item-subtitle"><b>{{SubDesc}}</b></div>-->
+				  <div class="item-title">{{ItemID}}</div>	
+				  <div class="item-subtitle">{{ItemDescription}}</div>
+				  <div class="item-subtitle">{{Qty}} {{Unit}} X {{UnitCost}}</div>
 				</div>
-				<div class="item-after">{{CurCode}} {{Amount}}</div>
+				<div class="item-after">{{Amount}}</div>
 			</li>
 		  </ul>
 		  {{/each}}
 		  </div>
+	  
         </div>
       </div>
     </div>
